--- a/src/app/layouts/sidebar/sidebar.component.scss
+++ b/src/app/layouts/sidebar/sidebar.component.scss
@@ -1,40 +1,93 @@
 .sidebar {
-    width: 250px;
+    position: relative;
+    width: 260px;
     /* Default width of the sidebar */
-    background-color: #333;
-    padding: 20px;
+    background-color: #060606;
+    padding: 30px;
     color: #fff;
     height: 100%;
     transition: width 0.3s ease;
     /* Smooth transition for collapsing/expanding */
+    display: flex;
+    flex-direction: column;
+
+    &.collapsed {
+        width: 100px;
+        /* Width when collapsed */
+        align-items: center;
+    }
+
+    .logo {
+        color: white;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        margin-bottom: 3vw;
+
+        h1 {
+            margin-left: 10px;
+        }
+    }
+
+    .toggle-btn {
+        position: absolute;
+        top: 3vw;
+        right: -20px;
+        /* Places the button slightly outside the sidebar */
+        transform: translateY(-50%);
+        /* Centers the button vertically */
+        background: #ffffff;
+        color: #000;
+        border: none;
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+        &:focus {
+            outline: none;
+        }
+
+        span {
+            font-size: 14px;
+        }
+    }
+
+    nav {
+        margin-top: 20px;
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+    }
 }
 
-.sidebar.collapsed {
-    width: 80px;
-    /* Width when collapsed */
-}
-
-.sidebar .toggle-btn {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px;
+.sidebar-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
     cursor: pointer;
-    font-size: 14px;
-    margin-bottom: 20px;
-}
 
-.sidebar nav {
-    margin-top: 20px;
-}
+    .icon {
+        fill: #fff;
+        width: 22px;
+        margin: 13px 0px;
+    }
 
-.sidebar a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    margin: 10px 0;
-}
+    a {
+        color: white;
+        text-decoration: none;
+        display: block;
+        margin: 10px 10px;
 
-.sidebar a.active {
-    background-color: #007bff;
+        &.active {
+            background-color: #007bff;
+        }
+    }
 }
