--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 .dashboard {
     .card-container {
+        margin-top: 20px;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 1rem;
