--- a/src/app/shared/components/card.component.scss
+++ b/src/app/shared/components/card.component.scss
@@ -1,20 +1,42 @@
 .card {
     background: white;
     border-radius: 8px;
-    padding: 1rem;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    padding: 18px;
 
-    h3 {
-        margin: 0;
-        font-size: 1.5rem;
-        color: #333;
+    h5 {
+        color: #797979;
+        font-weight: 400;
+        margin-bottom: 10px;
+    }
+
+    h1 {
+        color: #060606;
+        font-weight: 600;
+        margin-bottom: 10px;
     }
 
     p {
-        margin: 0.5rem 0 0;
-        font-size: 2rem;
-        font-weight: bold;
-        color: #007bff;
+        color: #060606;
+        font-weight: 200;
+        font-size: 12px;
+    }
+
+    .card-icon {
+        width: 46px;
+        height: 46px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+            width: 20px;
+        }
+    }
+
+    .value-group {
+        display: flex;
+        align-items: center;
     }
 }
