--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
 <div class="dashboard">
     <h1>Dashboard</h1>
+    <hr>
+    <div>
+        <h2>Overview</h2>
+    </div>
     <div class="card-container">
         <app-card *ngFor="let card of cards" [data]="card"></app-card>
     </div>
