--- a/src/app/layouts/sidebar/sidebar.component.scss
+++ b/src/app/layouts/sidebar/sidebar.component.scss
@@ -31,7 +31,7 @@
 
     .toggle-btn {
         position: absolute;
-        top: 3vw;
+        top: 50px;
         right: -20px;
         /* Places the button slightly outside the sidebar */
         transform: translateY(-50%);
@@ -84,7 +84,7 @@
         color: white;
         text-decoration: none;
         display: block;
-        margin: 10px 10px;
+        margin: 10px 16px;
 
         &.active {
             background-color: #007bff;
